add payload cms

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "xivstrat",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -10,7 +11,13 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@payloadcms/db-postgres": "3.58.0",
+    "@payloadcms/next": "3.58.0",
+    "@payloadcms/payload-cloud": "3.58.0",
+    "@payloadcms/richtext-lexical": "3.58.0",
+    "graphql": "16.11.0",
     "next": "15.5.4",
+    "payload": "3.58.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
@@ -21,6 +28,7 @@
     "@types/react": "19.2.2",
     "@types/react-dom": "19.2.1",
     "lefthook": "1.13.6",
+    "sharp": "0.34.4",
     "tailwindcss": "4.1.14",
     "typescript": "5.9.3"
   }
