--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@payloadcms/next": "3.58.0",
     "@payloadcms/payload-cloud": "3.58.0",
     "@payloadcms/richtext-lexical": "3.58.0",
+    "@payloadcms/translations": "3.58.0",
     "graphql": "16.11.0",
     "next": "15.5.4",
     "payload": "3.58.0",
