payload相关路径不格式化

--- a/biome.json
+++ b/biome.json
@@ -13,7 +13,8 @@
       "!.next",
       "!dist",
       "!build",
-      "!(payload)"
+      "!(payload)",
+      "!(payload-types.ts)"
     ]
   },
   "formatter": {
