payload相关路径不格式化

--- a/biome.json
+++ b/biome.json
@@ -14,7 +14,7 @@
       "!dist",
       "!build",
       "!(payload)",
-      "!(payload-types.ts)"
+      "!payload-types.ts"
     ]
   },
   "formatter": {
