--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "@payloadcms/payload-cloud": "3.58.0",
     "@payloadcms/richtext-lexical": "3.58.0",
     "@payloadcms/translations": "3.58.0",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
     "graphql": "16.11.0",
+    "lucide-react": "0.545.0",
     "next": "15.5.4",
     "payload": "3.58.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "tailwind-merge": "3.3.1"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.5",
@@ -31,6 +35,7 @@
     "lefthook": "1.13.6",
     "sharp": "0.34.4",
     "tailwindcss": "4.1.14",
+    "tw-animate-css": "1.4.0",
     "typescript": "5.9.3"
   }
 }
