--- a/package.json
+++ b/package.json
@@ -11,17 +11,19 @@
     "format": "biome format --write"
   },
   "dependencies": {
-    "@payloadcms/db-postgres": "3.58.0",
-    "@payloadcms/next": "3.58.0",
-    "@payloadcms/payload-cloud": "3.58.0",
-    "@payloadcms/richtext-lexical": "3.58.0",
-    "@payloadcms/translations": "3.58.0",
+    "@payloadcms/db-postgres": "3.59.0",
+    "@payloadcms/next": "3.59.0",
+    "@payloadcms/payload-cloud": "3.59.0",
+    "@payloadcms/richtext-lexical": "3.59.0",
+    "@payloadcms/translations": "3.59.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "graphql": "16.11.0",
     "lucide-react": "0.545.0",
     "next": "15.5.4",
-    "payload": "3.58.0",
+    "next-easy-darkmode": "0.0.7",
+    "next-themes": "0.4.6",
+    "payload": "3.59.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "3.3.1"
