--- a/biome.json
+++ b/biome.json
@@ -14,7 +14,8 @@
       "!dist",
       "!build",
       "!(payload)",
-      "!payload-types.ts"
+      "!payload-types.ts",
+      "!migrations"
     ]
   },
   "formatter": {
