--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@payloadcms/next": "3.59.1",
     "@payloadcms/payload-cloud": "3.59.1",
     "@payloadcms/richtext-lexical": "3.59.1",
+    "@payloadcms/storage-s3": "3.59.1",
     "@payloadcms/translations": "3.59.1",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
