--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "2.1.1",
     "graphql": "16.11.0",
     "lucide-react": "0.545.0",
+    "nanoid": "5.1.6",
     "next": "15.5.4",
     "next-easy-darkmode": "0.0.7",
     "next-themes": "0.4.6",
