--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "generate:types": "payload generate:types"
   },
   "dependencies": {
-    "@payloadcms/db-postgres": "3.59.1",
+    "@payloadcms/db-mongodb": "3.59.1",
     "@payloadcms/next": "3.59.1",
     "@payloadcms/richtext-lexical": "3.59.1",
     "@payloadcms/storage-s3": "3.59.1",
